# rust-editor

./: Cargo.toml  readme.md
src/: actions.rs  buffer.rs  commands.rs  console.rs  cursor.rs  keymap.rs  logic.md  main.rs  mode.rs  test.md
src/assets/: index.css  index.html  index.js  index.js.bak
src/assets/fonts/: KaTeX_AMS-Regular.woff2.b64  KaTeX_Caligraphic-Bold.woff2.b64  KaTeX_Caligraphic-Regular.woff2.b64  KaTeX_Fraktur-Bold.woff2.b64  KaTeX_Fraktur-Regular.woff2.b64  KaTeX_Main-Bold.woff2.b64  KaTeX_Main-BoldItalic.woff2.b64  KaTeX_Main-Italic.woff2.b64  KaTeX_Main-Regular.woff2.b64  KaTeX_Math-BoldItalic.woff2.b64  KaTeX_Math-Italic.woff2.b64  KaTeX_SansSerif-Bold.woff2.b64  KaTeX_SansSerif-Italic.woff2.b64  KaTeX_SansSerif-Regular.woff2.b64  KaTeX_Script-Regular.woff2.b64  KaTeX_Size1-Regular.woff2.b64  KaTeX_Size2-Regular.woff2.b64  KaTeX_Size3-Regular.woff2.b64  KaTeX_Size4-Regular.woff2.b64  KaTeX_Typewriter-Regular.woff2.b64  convert_fonts_b64.sh  convert_fonts_b64.sh.b64
