[package]
name = "rust_editor"
version = "0.1.0"
authors = ["Tesseract Cat <tesseractcats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.7", features = ["edge"] }
ropey = "1"
regex = "1.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
tinyfiledialogs = "3"
