[package]
name = "frog"
version = "0.2.0"
authors = ["Tesseract Cat <tesseractcats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.7", features = ["edge"] }
ropey = "1"
regex = "1.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
rust-embed="5.6.0"
tinyfiledialogs = "3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellscalingapi"] }
